# unnamed_weeb_music_database

./: README  README.md
.github/workflows/: rust-clippy.yml  rust.yml
backend/: Cargo.toml  README.md  sqlx-data.json
backend/src/: constants.rs  main.rs
backend/src/controllers/: graphql.rs  mod.rs  page.rs
backend/src/database/: artist.rs  mod.rs  release.rs  song.rs
backend/src/database/migrations/: up.sql
backend/src/models/: artist.rs  mod.rs  release.rs  song.rs
backend/src/utils/: config.rs  context.rs  error.rs  middleware.rs  mod.rs  startup.rs
frontend/: .npmrc  .prettierrc  README.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  windi.config.ts
frontend/assets/css/: fonts.css  themes.scss
frontend/plugins/themes/: flavors.ts  index.client.ts  types.ts
