[package]
name = "unnamed_weeb_music_database"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.18"
serde = "1.0.137"
serde_json = "1.0.81"

# Routerify and shenanigans
routerify = "3.0.0"
routerify-json-response = "3.0.0"

# toml parsing for configuration.
confy = "0.4.0"

# async utils
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"

# Logging Instruments
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

# GraphQl
juniper = "0.15.9"

# SQLx (postgres)
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }

# Ulid for generating unique ids
ulid = { version = "0.5.0", features = ["std"] }
dotenv = "0.15.0"
